src/org/openstreetmap/josm/gui/mappaint/mapcss/parser/MapCSSParser.java
/* Generated By:JavaCC: Do not edit this line. MapCSSParser.java */
package org.openstreetmap.josm.gui.mappaint.mapcss.parser;

import java.awt.Color;
import java.util.ArrayList;
import java.util.List;

import org.openstreetmap.josm.gui.mappaint.Keyword;
import org.openstreetmap.josm.gui.mappaint.mapcss.Condition;
import org.openstreetmap.josm.gui.mappaint.mapcss.Condition.Context;
import org.openstreetmap.josm.gui.mappaint.mapcss.Expression;
import org.openstreetmap.josm.gui.mappaint.mapcss.Instruction;
import org.openstreetmap.josm.gui.mappaint.mapcss.MapCSSRule;
import org.openstreetmap.josm.gui.mappaint.mapcss.MapCSSStyleSource;
import org.openstreetmap.josm.gui.mappaint.mapcss.Selector;
import org.openstreetmap.josm.gui.mappaint.mapcss.Expression.FunctionExpression;
import org.openstreetmap.josm.gui.mappaint.mapcss.Expression.LiteralExpression;
import org.openstreetmap.josm.gui.mappaint.mapcss.Selector.ChildOrParentSelector;
import org.openstreetmap.josm.gui.mappaint.mapcss.Selector.GeneralSelector;
import org.openstreetmap.josm.gui.mappaint.mapcss.Selector.LinkSelector;
import org.openstreetmap.josm.tools.Pair;

public class MapCSSParser implements MapCSSParserConstants {
    MapCSSStyleSource sheet;

/*************
 * Parser definitions
 *
 *                       rule
 *  _______________________|______________________________
 * |                                                      |
 *        selector                      declaration
 *  _________|___________________   _________|____________
 * |                             | |                      |
 *
 * way|z11-12[highway=residential] { color: red; width: 3 }
 *
 *    |_____||___________________|   |_________|
 *       |            |                   |
 *     zoom       condition          instruction
 *
 * more general:
 *
 * way|z13-[a=b][c=d]::subpart, way|z-3[u=v]:closed::subpart2 { p1 : val; p2 : val; }
 *
 * 'val' can be a literal, or an expression like "prop(width, default) + 0.8".
 *
 */
  final public int uint() throws ParseException {
    Token i;
    i = jj_consume_token(UINT);
               {if (true) return Integer.parseInt(i.image);}
    throw new Error("Missing return statement in function");
  }

  final public int int_() throws ParseException {
    int i;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      i = uint();
                       {if (true) return -i;}
      break;
    case UINT:
      i = uint();
                                                 {if (true) return i;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public float ufloat() throws ParseException {
    Token f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UFLOAT:
      f = jj_consume_token(UFLOAT);
      break;
    case UINT:
      f = jj_consume_token(UINT);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return Float.parseFloat(f.image);}
    throw new Error("Missing return statement in function");
  }

  final public float float_() throws ParseException {
    float f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      f = ufloat();
                         {if (true) return -f;}
      break;
    case UINT:
    case UFLOAT:
      f = ufloat();
                                                     {if (true) return f;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String string() throws ParseException {
    Token t;
    t = jj_consume_token(STRING);
      {if (true) return t.image.substring(1, t.image.length() - 1).replace("\\\"", "\"").replace("\\\\", "\\");}
    throw new Error("Missing return statement in function");
  }

  final public String string_or_ident() throws ParseException {
    Token t;
    String s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      t = jj_consume_token(IDENT);
                {if (true) return t.image;}
      break;
    case STRING:
      s = string();
                                                 {if (true) return s;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String regex() throws ParseException {
    Token t;
    t = jj_consume_token(REGEX);
      {if (true) return t.image.substring(1, t.image.length() - 1);}
    throw new Error("Missing return statement in function");
  }

/**
 * white-space
 */
  final public void s() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case S:
      jj_consume_token(S);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
  }

/**
 * mix of white-space and comments
 */
  final public void w() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S:
      case COMMENT_START:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S:
        jj_consume_token(S);
        break;
      case COMMENT_START:
        jj_consume_token(COMMENT_START);
        jj_consume_token(COMMENT_END);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/**
 * comma delimited list of floats (at least 2, all >= 0)
 */
  final public List<Float> float_array() throws ParseException {
    float f;
    List<Float> fs = new ArrayList<Float>();
    f = ufloat();
                 fs.add(f);
    label_2:
    while (true) {
      jj_consume_token(COMMA);
      s();
      f = ufloat();
                     fs.add(f);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
    }
        {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

/**
 * root
 */
  final public void sheet(MapCSSStyleSource sheet) throws ParseException {
    MapCSSRule r;
    Token com = null;
      this.sheet = sheet;
    w();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
      case STAR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      try {
        r = rule();
                       if (r != null) { sheet.rules.add(r); }
        w();
      } catch (ParseException ex) {
            error_skipto(RBRACE);
            w();
      }
    }
    jj_consume_token(0);
  }

  final public MapCSSRule rule() throws ParseException {
    List<Selector> selectors = new ArrayList<Selector>();
    Selector sel;
    List<Instruction> decl;
    sel = child_selector();
                           selectors.add(sel);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      w();
      sel = child_selector();
                               selectors.add(sel);
    }
    decl = declaration();
      {if (true) return new MapCSSRule(selectors, decl);}
    throw new Error("Missing return statement in function");
  }

  final public Selector child_selector() throws ParseException {
    boolean parentSelector = false;
    Condition c;
    List<Condition> conditions = new ArrayList<Condition>();
    Selector selLeft;
    LinkSelector selLink = null;
    Selector selRight = null;
    selLeft = selector();
    w();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GREATER:
    case LESS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GREATER:
        jj_consume_token(GREATER);
                      parentSelector = false;
        break;
      case LESS:
        jj_consume_token(LESS);
                                                           parentSelector = true;
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LSQUARE:
        case EXCLAMATION:
        case COLON:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LSQUARE:
          c = condition(Context.LINK);
          break;
        case EXCLAMATION:
        case COLON:
          c = pseudoclass(Context.LINK);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                        conditions.add(c);
      }
          selLink = new LinkSelector(conditions);
      w();
      selRight = selector();
      w();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
      {if (true) return selRight != null ? new ChildOrParentSelector(selLeft, selLink, selRight, parentSelector) : selLeft;}
    throw new Error("Missing return statement in function");
  }

  final public Selector selector() throws ParseException {
    Token base;
    Condition c;
    Pair<Integer, Integer> r = null;
    List<Condition> conditions = new ArrayList<Condition>();
    String sub = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      base = jj_consume_token(IDENT);
      break;
    case STAR:
      base = jj_consume_token(STAR);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PIPE_Z:
      r = zoom();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSQUARE:
      case EXCLAMATION:
      case COLON:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSQUARE:
        c = condition(Context.PRIMITIVE);
        break;
      case EXCLAMATION:
      case COLON:
        c = pseudoclass(Context.PRIMITIVE);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                              conditions.add(c);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DCOLON:
      sub = subpart();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
      {if (true) return new GeneralSelector(base.image, r, conditions, sub);}
    throw new Error("Missing return statement in function");
  }

  final public Pair<Integer, Integer> zoom() throws ParseException {
    Integer min = 0;
    Integer max = Integer.MAX_VALUE;
    jj_consume_token(PIPE_Z);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      max = uint();
      break;
    case UINT:
      min = uint();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        jj_consume_token(MINUS);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UINT:
          max = uint();
          break;
        default:
          jj_la1[19] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return new Pair<Integer, Integer>(min, max);}
    throw new Error("Missing return statement in function");
  }

  final public Condition condition(Context context) throws ParseException {
    Condition c;
    Expression e;
    jj_consume_token(LSQUARE);
    s();
    if (jj_2_1(2147483647)) {
      c = simple_key_condition(context);
      s();
      jj_consume_token(RSQUARE);
                                                            {if (true) return c;}
    } else if (jj_2_2(2147483647)) {
      c = simple_key_value_condition(context);
      s();
      jj_consume_token(RSQUARE);
                                                                  {if (true) return c;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
      case UINT:
      case UFLOAT:
      case STRING:
      case HEXCOLOR:
      case LPAR:
      case EXCLAMATION:
      case PLUS:
      case MINUS:
        e = expression();
        jj_consume_token(RSQUARE);
                                       {if (true) return Condition.create(e, context);}
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public String tag_key() throws ParseException {
    String s;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      s = string();
                     {if (true) return s;}
      break;
    case IDENT:
      t = jj_consume_token(IDENT);
                    s = t.image;
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COLON:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_7;
        }
        jj_consume_token(COLON);
        t = jj_consume_token(IDENT);
                                                         s += ':' + t.image;
      }
                                                                                    {if (true) return s;}
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Condition simple_key_condition(Context context) throws ParseException {
    boolean not = false;
    boolean yes = false;
    String key;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXCLAMATION:
      jj_consume_token(EXCLAMATION);
                      not = true;
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    key = tag_key();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUESTION:
      jj_consume_token(QUESTION);
                   yes = true;
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
      {if (true) return Condition.create(key, not, yes, context);}
    throw new Error("Missing return statement in function");
  }

  final public Condition simple_key_value_condition(Context context) throws ParseException {
    String key;
    String val;
    float f;
    int i;
    Condition.Op op;
    key = tag_key();
    s();
    if (jj_2_4(2)) {
      jj_consume_token(EQUAL);
      jj_consume_token(TILDE);
                              op=Condition.Op.REGEX;
      s();
      val = regex();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case EQUAL:
      case EXCLAMATION:
      case TILDE:
      case DOLLAR:
      case CARET:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXCLAMATION:
          jj_consume_token(EXCLAMATION);
          jj_consume_token(EQUAL);
                                            op=Condition.Op.NEQ;
          break;
        case EQUAL:
          jj_consume_token(EQUAL);
                              op=Condition.Op.EQ;
          break;
        case TILDE:
          jj_consume_token(TILDE);
          jj_consume_token(EQUAL);
                                      op=Condition.Op.ONE_OF;
          break;
        case CARET:
          jj_consume_token(CARET);
          jj_consume_token(EQUAL);
                                      op=Condition.Op.BEGINS_WITH;
          break;
        case DOLLAR:
          jj_consume_token(DOLLAR);
          jj_consume_token(EQUAL);
                                       op=Condition.Op.ENDS_WITH;
          break;
        case STAR:
          jj_consume_token(STAR);
          jj_consume_token(EQUAL);
                                     op=Condition.Op.CONTAINS;
          break;
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        s();
        if (jj_2_3(2)) {
          i = int_();
                                   val=Integer.toString(i);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UINT:
          case UFLOAT:
          case MINUS:
            f = float_();
                                     val=Float.toString(f);
            break;
          case IDENT:
          case STRING:
            val = string_or_ident();
            break;
          default:
            jj_la1[28] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case GREATER_EQUAL:
      case LESS_EQUAL:
      case GREATER:
      case LESS:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GREATER_EQUAL:
          jj_consume_token(GREATER_EQUAL);
                                      op=Condition.Op.GREATER_OR_EQUAL;
          break;
        case GREATER:
          jj_consume_token(GREATER);
                                op=Condition.Op.GREATER;
          break;
        case LESS_EQUAL:
          jj_consume_token(LESS_EQUAL);
                                   op=Condition.Op.LESS_OR_EQUAL;
          break;
        case LESS:
          jj_consume_token(LESS);
                             op=Condition.Op.LESS;
          break;
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        s();
        f = float_();
                         val=Float.toString(f);
        break;
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return Condition.create(key, val, op, context);}
    throw new Error("Missing return statement in function");
  }

  final public Condition pseudoclass(Context context) throws ParseException {
    Token t;
    boolean not = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXCLAMATION:
      jj_consume_token(EXCLAMATION);
                      not = true;
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
    jj_consume_token(COLON);
    t = jj_consume_token(IDENT);
      {if (true) return Condition.create(t.image, not, context);}
    throw new Error("Missing return statement in function");
  }

  final public String subpart() throws ParseException {
    Token t;
    jj_consume_token(DCOLON);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      t = jj_consume_token(IDENT);
      break;
    case STAR:
      t = jj_consume_token(STAR);
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }
